# asset_auto_picker

./: .mcpregistry_github_token  .mcpregistry_registry_token  Dockerfile  README.md  __init__.py  asset_traversal_service.py  cached_3d_png_paths.json  cached_file_name.json  cached_file_name_short.json  emoji_agent.py  main.py  pyproject.toml  qdrant_ingest.py  railway.toml  requirements.txt  server.json  start.sh
asset_auto_picker/: __init__.py  main.py
asset_auto_picker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
model/: emoji_asset.py
