[project]
name = "asset-auto-picker"
readme = "README.md"
version = "1.2.0"
description = "The MCP Server use for auto pick file"
requires-python = ">=3.11"
authors = [
  { name = "STrong" },
]
license = { text = "MIT" }
dependencies = [
    "colorama>=0.4.6",
    "fore>=0.1.8",
    "httpx>=0.28.1",
    "mcp[cli]>=1.19.0",
    "rapidfuzz>=3.14.1",
    "twine>=6.2.0",
]
keywords = [
  "mcp",
  "model-context-protocol",
  "mcp-name: io.github.TranThienTrong/asset-auto-picker",
]
